--- a/Flutter-Covid-19-Tracker-App-Tutorials-main/Flutter-Covid-19-Tracker-App-Tutorials-main/analysis_options.yaml
+++ b/Flutter-Covid-19-Tracker-App-Tutorials-main/Flutter-Covid-19-Tracker-App-Tutorials-main/analysis_options.yaml
@@ -7,8 +7,7 @@
 
 # The following line activates a set of recommended lints for Flutter apps,
 # packages, and plugins designed to encourage good coding practices.
-#include: package:flutter_lints/flutter.yaml
-#comment above line to avoid blue lines in code
+include: package:flutter_lints/flutter.yaml
 
 linter:
   # The lint rules applied to this project can be customized in the
